minor adjustments positioning and text

--- a/baseline_trials/DictatorNormPage.html
+++ b/baseline_trials/DictatorNormPage.html
@@ -433,7 +433,7 @@ $(document).ready(function () {
 
 </div>
 
-    <p>{{ treatment_text }} {{ C.norm_strategy_dic_gives }}? </p>
+    <p> How <b style="color: red;">socially acceptable</b> is it to give {{ C.norm_strategy_dic_gives }} points to Person B? </p>
 
 <!--<div class='numbers'>-->
 <!--   <div class="number-row">-->
