--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -441,7 +441,7 @@ $(document).ready(function () {
 
 </div>
 
-    <p>{{ treatment_text }} </p>
+     <p> How many points do you <b style="color: red;">give</b> to Person B? </p>
 
 <div class='numbers'>
    <div class="number-row">
