--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -1,9 +1,9 @@
 {{ block title }}
-    Instructions
+
 {{ endblock }}
 {{ block content }}
 
-Here are some instructions.
+Here are the instructions for condition {{ treatment_type }}.
 
     {{ next_button }}
 
