--- a/TPP_game/Punishment.html
+++ b/TPP_game/Punishment.html
@@ -195,6 +195,65 @@ Round {{ subsession.round_number }}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script>
+
+// Move updateCoinStack function to the global scope
+function updateCoinStack(count, index) {
+
+    total_endowment = {{ C.total_endowment }}
+
+    const punishmentEffectiveness = {{ C.punishment_effectiveness }};
+    const punishmentPoints = {{ C.punishment_points }};
+    //console.log('Decisions:', {{ decisions | safe }});
+    const decisions = {{ decisions | safe }};
+
+
+    //console.log('updateCoinStack called with:', { count, index });
+
+    const decision = decisions.find((d) => d.index === parseInt(index, 10));
+
+    const dictatorKeeps = decision.dictator_keeps;
+    const TPupdate = punishmentPoints - count;
+    const Dupdate = dictatorKeeps - (count * punishmentEffectiveness);
+
+    //console.log('TPupdate:', TPupdate, 'Dupdate:', Dupdate);
+
+    // Clear existing stacks
+    $(`.coinstackTP[data-index="${index}"]`).empty();
+    //console.log('Cleared coinstackTP for index:', index);
+
+    $(`.coinstackD[data-index="${index}"]`).empty();
+    //console.log('Cleared coinstackD for index:', index);
+
+    // Populate updated stacks
+    for (let i = 0; i < TPupdate; i++) {
+        $(`.coinstackTP[data-index="${index}"]`).append('<div class="coinown"></div>');
+        //console.log('Appended coinown to coinstackTP:', i + 1);
+    }
+    for (let i = 0; i < Dupdate; i++) {
+        $(`.coinstackD[data-index="${index}"]`).append('<div class="coin" style="left:19%;"></div>');
+        //console.log('Appended coin to coinstackD:', i + 1);
+    }
+
+    //console.log('updateCoinStack completed for index:', index);
+}
+
+// Hover function calling updateCoinStack
+$('.number').hover(function () {
+    const value = $(this).data('value'); // Get the number value
+    const index = $(this).closest('.container').data('index');
+
+    //console.log('hover triggered. Value:', value, 'Index:', index);
+    updateCoinStack(value, index); // Now accessible
+});
+
+
+    $('.number-row').mouseleave(function () {
+        const index = $(this).closest('.container').data('index');
+        updateCoinStack(punishments, index);
+    });
+
+
+
 $(document).ready(function () {
 
     // task variables
@@ -208,6 +267,7 @@ $(document).ready(function () {
 
     const punishmentEffectiveness = {{ C.punishment_effectiveness }};
     const punishmentPoints = {{ C.punishment_points }};
+    console.log('Decisions:', {{ decisions | safe }});
     const decisions = {{ decisions | safe }};
 
     // dependent variable
@@ -244,30 +304,29 @@ $(document).ready(function () {
         }
     });
 
-    function deactivateNumbers(numbersToDisable) {
+    function deactivateNumbers(numbersToDisable, index) {
         numbersToDisable.forEach(num => {
-            $('.number[data-value="' + num + '"]').addClass('disabled');
+            $('.number[data-value="' + num + '"][data-index="' + index + '"]').addClass('disabled');
         });
     }
 
-    // deactive punishment that would generate negative values
-    const DPpossible = Math.ceil(decision.dictator_keeps / 3);
-    const numbersToDisable = [];
-    for (let i = DPpossible + 1; i <= punishmentPoints; i++) {
-        numbersToDisable.push(i);
-    }
-    deactivateNumbers(numbersToDisable);
+    // deactivate punishment that would generate negative values
+    decisions.forEach(decision => {
+        const DPpossible = Math.ceil(decision.dictator_keeps / 3);
+        const numbersToDisable = [];
 
-    // add hover event listener to numbers
-    $('.number').hover(function () {
-        const value = $(this).data('value'); // Get the number value
-        const index = $(this).data('index');
-        updateCoinStack(value, index); // Update the coin stack
+        // Add numbers to disable based on the logic for each decision
+        for (let i = DPpossible + 1; i <= punishmentPoints; i++) {
+            numbersToDisable.push(i);
+        }
+
+        // Deactivate numbers for the current decision
+        deactivateNumbers(numbersToDisable, decision.index);
     });
 
     $('.number').on('click', function () {
         // Remove 'selected' class from all buttons in this row
-        $(this).closest('.number-row').find('.number').removeClass('selected');
+        $(this).closest('.container').find('.number').removeClass('selected');
 
         // Add 'selected' class to the clicked button
         $(this).addClass('selected');
@@ -277,7 +336,7 @@ $(document).ready(function () {
         const index = $(this).data('index');
 
         // Update the corresponding punishment value in the array
-        punishments[index] = value;
+        punishments[index - 1] = value;
 
         // Update the hidden input field for this row
         $(`#selected-number-${index}`).val(value);
@@ -286,8 +345,9 @@ $(document).ready(function () {
         updateCoinStack(value, index);
 
         // Debugging
-        console.log($(this).closest('.number-row')); // Ensure it finds the correct row
-
+        console.log('Index:', index);
+        console.log('Value:', value);
+        console.log('Decisions:', decisions);
         console.log(`Punishment values: ${punishments}`);
     });
 
@@ -297,30 +357,8 @@ $(document).ready(function () {
         $('form').submit();
     });
 
-    $('.number-row').mouseleave(function () {
-        const index = $(this).data('index');
-        updateCoinStack(punishments, index);
-    });
-
-    // Function to update the coin stack
-    function updateCoinStack(count, index) {
-        const decision = decisions.find((d) => d.index === index);
-        const dictatorKeeps = decision.dictator_keeps;
-        const TPupdate = punishmentPoints - count;
-        const Dupdate = dictatorKeeps - (count * punishmentEffectiveness);
-
-        $(`.coinstackTP[data-index="${index}"]`).empty();
-        $(`.coinstackD[data-index="${index}"]`).empty();
-
-        for (let i = 0; i < TPupdate; i++) {
-            $(`.coinstackTP[data-index="${index}"]`).append('<div class="coinown"></div>');
-        }
-        for (let i = 0; i < Dupdate; i++) {
-            $(`.coinstackD[data-index="${index}"]`).append('<div class="coin" style="left:19%;"></div>');
-        }
-    }
-
 });
+
 </script>
 
 {{ endblock }}
@@ -342,14 +380,14 @@ $(document).ready(function () {
 
     {% for decision in decisions %}
     <div class='responsive-div'>
-        <div class='container'>
-            <div data-index="{{ decision.index }}">
+        <div class='container' data-index="{{ decision.index }}">
+            <div data-index="{{ decision.index }}" >
 
-                <img src="" style='width:50%; position:absolute; right:16vw' class='dictatorCountry'>
+                <!---img src="" style='width:50%; position:absolute; right:16vw' class='dictatorCountry'>
                 <img src="" style='width:50%; position:absolute; left:16vw' class='receiverCountry'>
 
                 <img src="" style='width:50%; position:absolute; top:7vw; right:22vw' class='dictatorCountryMap'>
-                <img src="" style='width:50%; position:absolute; top:7vw; left:22vw' class='receiverCountryMap'>
+                <img src="" style='width:50%; position:absolute; top:7vw; left:22vw' class='receiverCountryMap'--->
 
                 <!---img src = "{{ static 'TPP_game/TPtask.png' }}" style='width:27vw; position:absolute; left:-25%; top:3vw'--->
 
@@ -360,7 +398,7 @@ $(document).ready(function () {
             </div>
             <br>
             <div class='numbers'>
-                <div class="number-row" data-row-index="{{ decision.index }}">
+                <div class="number-row" data-index="{{ decision.index }}" data-input="selected-number-{{ decision.index }}">
                     {{ for num in punishment_points }}
                     <div class="number" data-value="{{ num }}" data-index="{{ decision.index }}">{{ num }}</div>
                     {{ endfor }}
