just re inserted the images

--- a/TPP_game/Punishment.html
+++ b/TPP_game/Punishment.html
@@ -383,11 +383,11 @@ $(document).ready(function () {
         <div class='container' data-index="{{ decision.index }}">
             <div data-index="{{ decision.index }}" >
 
-                <!---img src="" style='width:50%; position:absolute; right:16vw' class='dictatorCountry'>
+                <img src="" style='width:50%; position:absolute; right:16vw' class='dictatorCountry'>
                 <img src="" style='width:50%; position:absolute; left:16vw' class='receiverCountry'>
 
                 <img src="" style='width:50%; position:absolute; top:7vw; right:22vw' class='dictatorCountryMap'>
-                <img src="" style='width:50%; position:absolute; top:7vw; left:22vw' class='receiverCountryMap'--->
+                <img src="" style='width:50%; position:absolute; top:7vw; left:22vw' class='receiverCountryMap'>
 
                 <!---img src = "{{ static 'TPP_game/TPtask.png' }}" style='width:27vw; position:absolute; left:-25%; top:3vw'--->
 
