--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -13,22 +13,27 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
 
+/////////// global variables
 
-// Move updateCoinStack function to the global scope
+    let TP_decisions_stored = [0, 0, 0, 0]; // Array to store selected values for each row
+    //console.log(`Punishment values: ${TP_decisions_stored}`);
+
+    var current_treatment = "{{ treatment }}";
+    //console.log("Current treatment:", current_treatment );
+
+    const TP_points = {{ C.TP_points }}; // punishment points
+    const TP_eff = {{ C.TP_effectiveness }}; // punishment or reward or victim compensation effectiveness
+
+    const TP_decisions = {{ TP_decisions | safe }};
+    //console.log('Decisions:', {{ TP_decisions | safe }});
+
+
+
+/////////// All the functions related to hovering and coinstacks/labels updating had to be moved out of the large parent function.
+// I do not know why but it works now
+
     // function to update the coin stack
     function updateCoinStack(count, index) {
-        // Clear existing coins in coinstack1
-
-        var current_treatment = "{{ treatment }}";
-        //console.log("Current treatment:", current_treatment );
-
-        const TP_points = {{ C.TP_points }}; // punishment points
-        const TP_eff = {{ C.TP_effectiveness }}; // punishment or reward or victim compensation effectiveness
-
-        //console.log('Decisions:', {{ TP_decisions | safe }});
-        const TP_decisions = {{ TP_decisions | safe }};
-
-        //console.log('updateCoinStack called with:', { count, index });
 
         const TP_decision = TP_decisions.find((d) => d.index === parseInt(index, 10));
 
@@ -91,6 +96,9 @@
         $(`#countTP2PP[data-index="${index}"]`).text(`${TPupdate}`);
         $(`#countTP3PR[data-index="${index}"]`).text(`${dictator_recipient_TPeffectUpdate}`);
         $(`#countTP3PC[data-index="${index}"]`).text(`${dictator_recipient_TPeffectUpdate}`);
+
+        //Debugging
+        //console.log('updateCoinStack called with:', { count, index });
     }
 
     // Hover function calling updateCoinStack
@@ -101,35 +109,27 @@
         updateCoinStack(value, index);
     });
 
+    // Function to restore the clicked or initial state of the row
+    function restoreRowState(index) {
+        const clickedValue = TP_decisions_stored[index - 1];
+        if (clickedValue > 0) {
+            updateCoinStack(clickedValue, index); // Restore to the clicked state
+        } else {
+            const TP_decision = TP_decisions.find((d) => d.index === parseInt(index, 10));
+            updateCoinStack(0, index); // Restore to the initial state
+        }
+        //console.log(`Restored row ${index} to ${clickedValue > 0 ? "clicked state" : "initial state"}`);
+    }
 
-    $('.number-row').mouseleave(function () {
-        const index = $(this).closest('.container').data('index');
-        console.log('Mouse leave triggered. Restoring stack for Index:', index);
-
-        updateCoinStack(TP_decisions_stored, index);
+    $(document).on('mouseleave', '.number-row', function () {
+        const index = $(this).data('index');
+        restoreRowState(index);
     });
 
-
-
+////////////// function for displaying the task, numbers, and labels and managing the click event
 $(document).ready(function () {
 
-    var current_treatment = "{{ treatment }}";
-    //console.log("Current treatment:", current_treatment );
-
-    const TP_decisions = {{ TP_decisions | safe }};
-    console.log('Decisions:', {{ TP_decisions | safe }});
-
-    // dependent variable
-    let TP_decisions_stored = [0, 0, 0, 0]; // Array to store selected values for each row
-
-    const TP_points = {{ C.TP_points }}; // punishment points
-
     dictator_recipient_TPeffect = 0 // dictator or recipient points that are destroyed by punishment or added by reward/compensation
-
-
-    const TP_eff = {{ C.TP_effectiveness }}; // punishment or reward or victim compensation effectiveness
-
-    var TPeffect = 0 // what does this do?
 
     // country pictures from https://github.com/irixapps/World-Flags/tree/master
     // naming convention: https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
@@ -138,8 +138,7 @@ $(document).ready(function () {
     dictatorCountry = "{{ dic_identity }}"
 
 
-    /////////
-    // script
+    /////////////// script
 
     // get flags
     $('.receiverCountry').attr('src', '/static/global/flags/' + receiverCountry +'.png');
@@ -174,15 +173,16 @@ $(document).ready(function () {
             $(`.coinstackR[data-index="${index}"]`).append('<div class="coin" style="left:83%;"></div>');
         }
 
-        // Make another coin stack for punisher in 2PP: different location
+        // Extra stacks in different locations
+        // punisher in 2PP punisher stack
         for (let i = 0; i < TP_points; i++) {
             $(`.coinstackTP2PP[data-index="${index}"]`).append('<div class="coinown2PP" style="left:83%;"></div>');
         }
-        // Make another coin stack for DG reward in 3PR: different location
+        // DG reward in 3PR
         for (let i = 0; i < dictator_recipient_TPeffect; i++) {
             $(`.coinstackTP3PR[data-index="${index}"]`).append('<div class="coinown3PR" style="left:7%;"></div>');
         }
-        // Make another coin stack for recipient compensation in 3PC: different location
+        // recipient compensation in 3PC
         for (let i = 0; i < dictator_recipient_TPeffect; i++) {
             $(`.coinstackTP3PC[data-index="${index}"]`).append('<div class="coinown3PC" style="left:102%;"></div>');
         }
@@ -223,7 +223,7 @@ $(document).ready(function () {
 
     $('.number').on('click', function () {
         // Remove 'selected' class from all buttons
-        $(this).closest('.container').find('.number').removeClass('selected');
+        $(this).closest('.number-row').find('.number').removeClass('selected');
 
         // Add 'selected' class to the clicked button
         $(this).addClass('selected');
@@ -241,14 +241,12 @@ $(document).ready(function () {
         // Update the coin stack
         updateCoinStack(value, index);
 
-        TPeffect = value
-        console.log(TPeffect)
 
         // Debugging
-        console.log('Index:', index);
+        //console.log('Index:', index);
         console.log('Value:', value);
-        console.log('TP Decisions:', TP_decisions);
-        console.log(`Punishment values: ${TP_decisions_stored}`);
+        //console.log('TP Decisions:', TP_decisions);
+        //console.log(`Punishment values: ${TP_decisions_stored}`);
     });
 
     // Submit button click handler
@@ -635,120 +633,114 @@ $(document).ready(function () {
 
 <body>
 
-<form method="post">
-    <!-- Add hidden input to store the selected value -->
-    <input type="hidden" name="TP_decision1" id="selected-number-1">
-    <input type="hidden" name="TP_decision2" id="selected-number-2">
-    <input type="hidden" name="TP_decision3" id="selected-number-3">
-    <input type="hidden" name="TP_decision4" id="selected-number-4">
+    <form method="post">
+        <!-- Add hidden input to store the selected value -->
+        <input type="hidden" name="TP_decision1" id="selected-number-1">
+        <input type="hidden" name="TP_decision2" id="selected-number-2">
+        <input type="hidden" name="TP_decision3" id="selected-number-3">
+        <input type="hidden" name="TP_decision4" id="selected-number-4">
 
-    {{ formfield_errors 'TP_decision1' }}
-    {{ formfield_errors 'TP_decision2' }}
-    {{ formfield_errors 'TP_decision3' }}
-    {{ formfield_errors 'TP_decision4' }}
+        {{ formfield_errors 'TP_decision1' }}
+        {{ formfield_errors 'TP_decision2' }}
+        {{ formfield_errors 'TP_decision3' }}
+        {{ formfield_errors 'TP_decision4' }}
 
-{% for TP_decision in TP_decisions %}
-<div class='responsive-div'>
+    {% for TP_decision in TP_decisions %}
+    <div class='responsive-div'>
 
-<div class='container' data-index="{{ TP_decision.index }}">
+    <div class='container' data-index="{{ TP_decision.index }}">
 
-    {% if dic_identity != "baseline"%}
+        {% if dic_identity != "baseline"%}
 
-    <img src="" style='width:50%; position:absolute; right:16vw' class='dictatorCountry'>
-    <img src="" style='width:50%; position:absolute; left:16vw' class='receiverCountry'>
+        <img src="" style='width:50%; position:absolute; right:16vw' class='dictatorCountry'>
+        <img src="" style='width:50%; position:absolute; left:16vw' class='receiverCountry'>
 
-    <img src="" style='width:50%; position:absolute; top:7vw; right:22vw' class='dictatorCountryMap'>
-    <img src="" style='width:50%; position:absolute; top:7vw; left:22vw' class='receiverCountryMap'>
+        <img src="" style='width:50%; position:absolute; top:7vw; right:22vw' class='dictatorCountryMap'>
+        <img src="" style='width:50%; position:absolute; top:7vw; left:22vw' class='receiverCountryMap'>
 
-    {% endif %}
+        {% endif %}
 
-    <img src="/static/{{ image }}" style="width:27vw; position:absolute; left:-25%; top:3vw">
+        <img src="/static/{{ image }}" style="width:27vw; position:absolute; left:-25%; top:3vw">
 
-    <!-- <img src='/static/baseline/3PP punish.png' style='width:27vw; position:absolute; left:20%; top:3vw'>  -->
+        <!-- <img src='/static/baseline/3PP punish.png' style='width:27vw; position:absolute; left:20%; top:3vw'>  -->
 
-    <span class='coinstack coinstackD' data-index="{{ TP_decision.index }}"></span>
+        <span class='coinstack coinstackD' data-index="{{ TP_decision.index }}"></span>
 
-    <div class="coin-count-labelD" id="countD" data-index="{{ TP_decision.index }}"></div>
+        <div class="coin-count-labelD" id="countD" data-index="{{ TP_decision.index }}"></div>
 
-    <span class='coinstack coinstackR' data-index="{{ TP_decision.index }}"></span>
+        <span class='coinstack coinstackR' data-index="{{ TP_decision.index }}"></span>
 
-    <div class="coin-count-labelR" id="countR" data-index="{{ TP_decision.index }}"></div>
-
-
-
-    {% if "punish" in player.treatment or "3PP country" in player.treatment %}
-
-        <span class='coinstack coinstackDDes' data-index="{{ TP_decision.index }}"></span>
-
-        <div class="coin-count-labelDDes" id="countDDes" data-index="{{ TP_decision.index }}"></div>
-
-    {% endif %}
-
-     {% if "reward" in player.treatment %}
-
-        <span class='coinstack coinstackTP3PR' data-index="{{ TP_decision.index }}"></span>
-
-        <div class="coin-count-labelTP3PR" id="countTP3PR" data-index="{{ TP_decision.index }}"></div>
-
-    {% endif %}
-
-    {% if "comp" in player.treatment %}
-
-        <span class='coinstack coinstackTP3PC' data-index="{{ TP_decision.index }}"></span>
-
-        <div class="coin-count-labelTP3PC" id="countTP3PC" data-index="{{ TP_decision.index }}"></div>
-
-    {% endif %}
-
-    {% if "3PP" in player.treatment %}
-        <img src="/static/global/minus_button.png" alt="-" style="position: absolute; width: 2vw; top: 55%; left: 12%;">
-    {% endif %}
-
-    {% if "3PR" in player.treatment %}
-        <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 2vw; top: 55%; left: 15%;">
-    {% endif %}
-
-    {% if "3PC" in player.treatment %}
-        <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 2vw; top: 55%; left: 84%;">
-    {% endif %}
-
-    {% if "2PP" in player.treatment %}
-        <img src="/static/global/minus_button.png" alt="-" style="position: absolute; width: 2vw; top: 5%; left: 46%;">
-    {% endif %}
-
-</div>
+        <div class="coin-count-labelR" id="countR" data-index="{{ TP_decision.index }}"></div>
 
 
-    <p> How much do you <b style="color: red;"> {{ treatment_text_action }} </b>  {{ treatment_text_receiver }}? </p>
 
-    <div class='numbers'>
-        <div class="number-row" data-index="{{ TP_decision.index }}" data-input="selected-number-{{ TP_decision.index }}">
-            {{ for num in TP_points }}
-            <div class="number" data-value="{{ num }}" data-index="{{ TP_decision.index }}">{{ num }}</div>
-            {{ endfor }}
+        {% if "punish" in player.treatment or "3PP country" in player.treatment %}
+
+            <span class='coinstack coinstackDDes' data-index="{{ TP_decision.index }}"></span>
+
+            <div class="coin-count-labelDDes" id="countDDes" data-index="{{ TP_decision.index }}"></div>
+
+        {% endif %}
+
+         {% if "reward" in player.treatment %}
+
+            <span class='coinstack coinstackTP3PR' data-index="{{ TP_decision.index }}"></span>
+
+            <div class="coin-count-labelTP3PR" id="countTP3PR" data-index="{{ TP_decision.index }}"></div>
+
+        {% endif %}
+
+        {% if "comp" in player.treatment %}
+
+            <span class='coinstack coinstackTP3PC' data-index="{{ TP_decision.index }}"></span>
+
+            <div class="coin-count-labelTP3PC" id="countTP3PC" data-index="{{ TP_decision.index }}"></div>
+
+        {% endif %}
+
+        {% if "3PP" in player.treatment %}
+            <img src="/static/global/minus_button.png" alt="-" style="position: absolute; width: 2vw; top: 55%; left: 12%;">
+        {% endif %}
+
+        {% if "3PR" in player.treatment %}
+            <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 2vw; top: 55%; left: 15%;">
+        {% endif %}
+
+        {% if "3PC" in player.treatment %}
+            <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 2vw; top: 55%; left: 84%;">
+        {% endif %}
+
+        {% if "2PP" in player.treatment %}
+            <img src="/static/global/minus_button.png" alt="-" style="position: absolute; width: 2vw; top: 5%; left: 46%;">
+        {% endif %}
+
+    </div>
+
+
+        <p> How much do you <b style="color: red;"> {{ treatment_text_action }} </b>  {{ treatment_text_receiver }}? </p>
+
+        <div class='numbers'>
+            <div class="number-row" data-index="{{ TP_decision.index }}" data-input="selected-number-{{ TP_decision.index }}">
+                {{ for num in TP_points }}
+                <div class="number" data-value="{{ num }}" data-index="{{ TP_decision.index }}">{{ num }}</div>
+                {{ endfor }}
+            </div>
         </div>
+     <br>
+
     </div>
- <br>
+    {% endfor %}
 
-</div>
-{% endfor %}
+        <br>
 
-    <br>
+       <div style="display: flex; justify-content: flex-end">
+            <button type="button" id="submit-button">Submit</button>
+        </div>
 
-   <div style="display: flex; justify-content: flex-end">
-        <button type="button" id="submit-button">Submit</button>
-    </div>
-
-
-</form>
-
-
-
+    </form>
 
 </body>
 </html>
-
-
 
 
 
