--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -137,6 +137,7 @@ $(document).ready(function () {
     receiverCountry = "{{ recip_identity }}"
     dictatorCountry = "{{ dic_identity }}"
 
+    role_switch_true = "{{ role_switch_true }}"
 
     /////////
     // script
@@ -647,6 +648,14 @@ $(document).ready(function () {
     {{ formfield_errors 'TP_decision3' }}
     {{ formfield_errors 'TP_decision4' }}
 
+    {% if role_switch_true == True %}
+
+    <p style="text-align: center;">
+    <b style="color: red;">ROLE SWITCH! You are now Person A!</b>
+</p>
+
+    {% endif %}
+
 {% for TP_decision in TP_decisions %}
 <div class='responsive-div'>
 
@@ -663,6 +672,8 @@ $(document).ready(function () {
     {% endif %}
 
     <img src="/static/{{ image }}" style="width:27vw; position:absolute; left:-25%; top:3vw">
+
+
 
     <!-- <img src='/static/baseline/3PP punish.png' style='width:27vw; position:absolute; left:20%; top:3vw'>  -->
 
@@ -714,6 +725,17 @@ $(document).ready(function () {
 
     {% if "2PP" in player.treatment %}
         <img src="/static/global/minus_button.png" alt="-" style="position: absolute; width: 2vw; top: 5%; left: 46%;">
+
+         <p>
+    <b style="color: red; font-size: 24px; position: absolute; top: 25.5%; left:101%;">YOU</b>
+</p>
+
+    {% else %}
+
+    <p>
+    <b style="color: red; font-size: 24px; position: absolute; top: 75%; left:46%;">YOU</b>
+</p>
+
     {% endif %}
 
 </div>
