updated the settings, added a consent and an intro page (to be filled later)

--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -258,7 +258,7 @@
         // Also includes response collection (different function for TP decision)
         if (current_treatment.includes("norm") ) { // in norm condition
 
-            // norm varibales
+            // norm variables
             total_endowment = {{C.total_endowment }}
             receiver = {{ C.norm_strategy_dic_gives_binary }} // The receiver gets however much the dictator gives
             TP_points_assigned = {{ C.norm_strategy_punish_norm }} // punishment points assigned by punisher
