updated the coinstacks code but still display error in 2PP and 3PP...

--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -1,8 +1,8 @@
 {% block title %}
 
-    <div style="display: flex; justify-content: flex-end">
-        <img src="{{ static 'intro_deception/mpi.png'}}" width="auto" height="100"/>
-    </div>
+<!--    <div style="display: flex; justify-content: flex-end">-->
+<!--        <img/>-->
+<!--    </div>-->
 
     Welcome
 
@@ -35,7 +35,7 @@
     <p>
         Dr. Charlotte Rossetti & Dr. Caroline Graf <br>
         Univeristy of Zürich, Switzerland <br>
-        <img src="{{ static 'intro_deception/signature.png'}}" width="auto" height="100"/>
+<!--        <img/>-->
     </p>
 </div>
 
