coinstack error sorted. dictator stuff tidied

--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -279,7 +279,7 @@
                     }
                     // red stack (destructed coins)
                     for (let i = 0; i < norm_TP_points; i++) {
-                        $(`.coinstackDDes[data-index="${index}"]`).append('<div class="coinown" style="left:75%;"></div>></div>');
+                        $(`.coinstackDDes[data-index="${index}"]`).append('<div class="coin_destroyed" style="left:19%;"></div>');
                     }
                     // punisher stack
                     for (let i = 0; i < norm_TP_points; i++) {
