fixed dictator gap and three decisions per page

--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -5,6 +5,8 @@
 
 Here are the instructions for condition {{ treatment_type }}.
 
-    {{ next_button }}
+    <div style="display: flex; justify-content: flex-end">
+      {% next_button %}
+    </div>
 
 {{ endblock }}
